숙소 리스트 및 리뷰 디자인

--- a/WebContent/company/accommodation/detail.html
+++ b/WebContent/company/accommodation/detail.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400&display=swap" rel="stylesheet">
     <script src="/js/accommodationLists/accommodationDetail.js"></script>
     <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
+    <script src="/js/company/accommodation/detail.js"></script>
 </head>
 
 
