--- a/WebContent/user/review/reg.html
+++ b/WebContent/user/review/reg.html
@@ -77,11 +77,26 @@
                         </div>
                         <div class="user-name">조재희</div>
                         <div class="star-container">
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
+                            <div>
+                                <i class="fas fa-star"></i>
+                            </div>
+                            <input type="hidden" value="0">
+                            <div>
+                                <i class="fas fa-star"></i>
+                            </div>
+                            <input type="hidden" value="1">
+                            <div>
+                                <i class="fas fa-star"></i>
+                            </div>
+                            <input type="hidden" value="2">
+                            <div>
+                                <i class="fas fa-star"></i>
+                            </div>
+                            <input type="hidden" value="3">
+                            <div>
+                                <i class="fas fa-star"></i>
+                            </div>
+                            <input type="hidden" value="4">
                         </div>
                         <div class="comment-container">
                             <textarea name="" id="" cols="47" rows="7" class="comment"></textarea>
