--- a/WebContent/admin/accommodations/applyList.html
+++ b/WebContent/admin/accommodations/applyList.html
@@ -170,7 +170,7 @@
                                     <td><input type="checkbox"></td>
                                     <td><input type="checkbox"></td>
                                 </tr>
-                                <tr>
+                                <tr class="btn-line">
                                     <td></td>
                                     <td></td>
                                     <td></td>
