--- a/WebContent/admin/accommodations/list.html
+++ b/WebContent/admin/accommodations/list.html
@@ -164,7 +164,7 @@
                                             <td>호텔</td>
                                             <td><input type="checkbox"></td>
                                         </tr>
-                                        <tr>
+                                        <tr class="btn-line">
                                             <td></td>
                                             <td></td>
                                             <td></td>
