--- a/WebContent/accommodation/detail.html
+++ b/WebContent/accommodation/detail.html
@@ -113,22 +113,29 @@
                     </form>
                 </div>
                 <form class="room-form">
+                    <section class="cry-img-section">
+                        <div>
+                            <div class="cry-img-container">
+                                <img class="cry-img" src="/images/cry.png" alt="">
+                            </div>
+                            <div class="cry-ment-container">
+                                <div class="cry-ment">예약 가능한 방이 없습니다.</div>
+                                <div class="cry-ment">다른 날짜를 검색해 주세요.</div>
+                            </div>
+                        </div>
+                    </section>
                     <section>
-                        <!-- <div class="radio-container">
-                            <input type="radio" name="radio" id="radio-1" class="radio" required>
-                            <label for="radio-1"><span></span></label>
-                        </div> -->
                         <div class="room-container">
                             <div class="room-img-container">
-                                <img src="/images/company/호텔/서울/강남,역삼,삼성/신라스테이_삼성/스탠다드_트윈/메인.jpg" alt= "신라스테이 삼성">
+                                <img src="/images/company/호텔/서울/강남,역삼,삼성/신라스테이_삼성/스탠다드_더블/메인.jpg">
                             </div>
                             <div class="room-detail-container">
                                 <div class="room-room">
-                                    <span>스탠다드 트윈</span>
+                                    <span>스탠다드 더블</span>
                                 </div>
                                 <div class="room-bed-count">
                                     <div>침대개수</div>
-                                    <div>2</div>
+                                    <div>1</div>
                                 </div>
                                 <div class="room-max-headcount">
                                     <div>최대 수용인원</div>
@@ -136,7 +143,7 @@
                                 </div>
                                 <div class="room-price">
                                     <div>가격</div>
-                                    <div>128,260원</div>
+                                    <div>500,260원</div>
                                 </div>
                                 <div class="highlight-btn-container">
                                     <a href=""><input type="button" class="highlight-btn" value="예약하기"></a>
