검색기능, 결제구현

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -20,7 +20,10 @@
             </div>
             <div>
                 <ul class="main-menu">
-                    <li class="header-search"><input type="text" placeholder="숙소명 또는 위치">
+                    <li class="header-search">
+                        <form>
+                            <input type="text" placeholder="숙소명 또는 위치">
+                        </form>
                         <a href=""><i class="fas fa-search"></i></a>
                     </li>
                     <li><a href="">제안하기</a></li>
