--- a/WebContent/user/reservation/pay.html
+++ b/WebContent/user/reservation/pay.html
@@ -6,11 +6,11 @@
     <link rel="icon" href="/images/logo.png">
     <link rel="stylesheet" href="/css/reset.css" type="text/css">
     <link rel="stylesheet" href="/css/layout.css">
-    <link rel="stylesheet" href="/css/user/offer/pay.css"  type="text/css">
+    <link rel="stylesheet" href="/css/user/reservation/pay.css"  type="text/css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400&display=swap" rel="stylesheet">
     <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
-    <script src="/js/user/offer/pay.js"></script>
+    <script src="/js/user/reservation/pay.js"></script>
     <title>TEUM | 틈을 채우다</title>
 </head>
 <body>
