이미지 경로 맞추기

--- a/WebContent/accommodation/detail.html
+++ b/WebContent/accommodation/detail.html
@@ -146,7 +146,7 @@
                                     <div>500,260원</div>
                                 </div>
                                 <div class="highlight-btn-container">
-                                    <a href=""><input type="button" class="highlight-btn" value="예약하기"></a>
+                                    <a href=""><input type="submit" class="highlight-btn" value="예약하기" disabled></a>
                                 </div>
                             </div>
                         </div>
@@ -173,7 +173,7 @@
                                     <div>500,260원</div>
                                 </div>
                                 <div class="highlight-btn-container">
-                                    <a href=""><input type="button" class="highlight-btn" value="예약하기"></a>
+                                    <a href=""><input type="submit" class="highlight-btn" value="예약하기" disabled></a>
                                 </div>
                             </div>
                         </div>
