--- a/WebContent/admin/accommodations/list.html
+++ b/WebContent/admin/accommodations/list.html
@@ -127,8 +127,8 @@
                                         <tr>
                                             <td>1</td>
                                             <td>김민영</td>
-                                            <td>시그니엘 서울</td>
-                                            <td>서울시 송파구</td>
+                                            <td class="ellips">시그니엘 서울</td>
+                                            <td class="ellips">서울시 송파구</td>
                                             <td>2020-11-01</td>
                                             <td>010-2774-5678</td>
                                             <td>호텔</td>
@@ -137,8 +137,8 @@
                                         <tr>
                                             <td>2</td>
                                             <td>김동영</td>
-                                            <td>롯데호텔 월드</td>
-                                            <td>서울시 송파구</td>
+                                            <td class="ellips">롯데호텔 월드</td>
+                                            <td class="ellips">서울시 송파구</td>
                                             <td>2020-11-05</td>
                                             <td>010-3462-8452</td>
                                             <td>호텔</td>
@@ -147,8 +147,8 @@
                                         <tr>
                                             <td>3</td>
                                             <td>정혜진</td>
-                                            <td>그랜드 워커힐 서울</td>
-                                            <td>서울시 광진구</td>
+                                            <td class="ellips">그랜드 워커힐 서울</td>
+                                            <td class="ellips">서울시 광진구</td>
                                             <td>2020-11-14</td>
                                             <td>010-2365-5678</td>
                                             <td>호텔</td>
@@ -157,8 +157,8 @@
                                         <tr>
                                             <td>4</td>
                                             <td>박은희</td>
-                                            <td>JW 메리어트 호텔 서울</td>
-                                            <td>서울시 서초구</td>
+                                            <td class="ellips">JW 메리어트 호텔 서울</td>
+                                            <td class="ellips">서울시 서초구</td>
                                             <td>2020-11-23</td>
                                             <td>010-3863-1263</td>
                                             <td>호텔</td>
