--- a/WebContent/admin/accommodations/applyDetail.html
+++ b/WebContent/admin/accommodations/applyDetail.html
@@ -116,22 +116,22 @@
 								<div class="rule">
 									<p>취소 및 환불 규정</p>
 									<ul>
-										<li> → 체크인일 기준 1일전 18시까지 : 100% 환불</li>
-										<li> → 체크인일 기준 1일전 18시이후~당일 : 환불불가</li>
-										<li> → 취소, 환불시 수수료가 발생할 수 있습니다</li>
-									</ul>
+			                            <li> <i class="far fa-check-square"></i> 체크인일 기준 1일전 18시까지 : 100% 환불</li>
+			                            <li> <i class="far fa-check-square"></i> 체크인일 기준 1일전 18시이후~당일 : 환불불가</li>
+			                            <li> <i class="far fa-check-square"></i> 취소, 환불시 수수료가 발생할 수 있습니다</li>
+			                        </ul>
 								</div>
 								<div class="check">
 									<p>확인사항 및 기타</p>
 									<ul>
-										<li> → 거리두기 단계 상향에 따라 일부 시설 이용이 제한될 수 있습니다</li>
-										<li> → 최대인원 초과시 입실 불가합니다</li>
-										<li> → 위의 정보는 호텔의 사정에 따라 변경될 수 있습니다</li>
-										<li> → 해당 이미지는 실제와 상이 할 수 있습니다</li>
-										<li> → 체크인 시 배정 또는 베드타입 미기재 상품은 특정객실과 베드타입을 보장하지 않습니다</li>
-										<li> → 해당 객실가는 세금, 봉사료가 포함된 금액입니다</li>
-										<li> → 미성년자는 보호자 동반없이 이용하실 수 없습니다</li>
-									</ul>
+			                            <li> <i class="far fa-check-square"></i> 거리두기 단계 상향에 따라 일부 시설 이용이 제한될 수 있습니다</li>
+			                            <li> <i class="far fa-check-square"></i> 최대인원 초과시 입실 불가합니다</li>
+			                            <li> <i class="far fa-check-square"></i> 위의 정보는 호텔의 사정에 따라 변경될 수 있습니다</li>
+			                            <li> <i class="far fa-check-square"></i> 해당 이미지는 실제와 상이 할 수 있습니다</li>
+			                            <li> <i class="far fa-check-square"></i> 체크인 시 배정 또는 베드타입 미기재 상품은 특정객실과 베드타입을 보장하지 않습니다</li>
+			                            <li> <i class="far fa-check-square"></i> 해당 객실가는 세금, 봉사료가 포함된 금액입니다</li>
+			                            <li> <i class="far fa-check-square"></i> 미성년자는 보호자 동반없이 이용하실 수 없습니다</li>
+			                        </ul>
 								</div>
 							</div>
 						</section>
@@ -201,8 +201,8 @@
 								
 							</form>
 							<div class="btn-box">
-							<input type="button" value="삭제" class="btn delete-btn">
-							<input type="button" value="승인" class="btn approval-btn">
+							<input type="submit" value="삭제" class="btn delete-btn">
+							<input type="submit" value="승인" class="btn approval-btn">
 							</div>
 						</section>
 					</div>
