역제안jsp 사진 에러 해결 및 각 페이지 null 처리

--- a/WebContent/company/accommodation/reg.html
+++ b/WebContent/company/accommodation/reg.html
@@ -124,29 +124,21 @@
                   </div>
                   
                   <div class="insert-box">
-                     <em style="color: red;">* </em>숙소사진1 추가  <br>
-                     <input type="file" accept="image acc_image" name="file" required>
-                  </div>
-                  <div class="insert-box">
-                     <em style="color: red;">* </em>숙소사진2 추가  <br>
+                     <em style="color: red;">* </em>숙소 메인<br>
                      <input type="file" accept="image acc_image" name="file" required>
                   </div>
                   <div class="img-box">
                   </div>
-                  <div class="insert-button">
+                  <!-- <div class="insert-button">
                      <input type="button" class="button add-button" value="방 추가">
                      <input type="button" class="button del-button" value="방 삭제">
-                  </div>
+                  </div> -->
                </div>
                <div class="box">
                   <section class="add-room ">
                      <div>
-                        <em style="color: red;">* </em>방 이름<br>
+                        <em style="color: red;">* </em>룸 이름<br>
                         <input type="text"  class="text-box room-name" name="room-name"  placeholder="스위트룸" required>
-                     </div>
-                     <div>
-                        <em style="color: red;">* </em>방 갯수<br>
-                        <input type="text" class="text-box room-count" name="room-count" placeholder="5" required>
                      </div>
                      <div>
                         <em style="color: red;">* </em>최대 인원 수<br>
@@ -161,11 +153,11 @@
                         <input type="text" class="text-box price" name="price" placeholder="100000" required>
                      </div>
                      <div>
-                        <em style="color: red;">* </em>방사진1 추가<br>
+                        <em style="color: red;">* </em>룸 이미지1<br>
                         <input type="file" accept="image text-box" class="text-box" name="file" required>
                      </div>
                      <div>
-                        <em style="color: red;">* </em>방사진2 추가<br>
+                        <em style="color: red;">* </em>룸 이미지2<br>
                         <input type="file" accept="image text-box" class="text-box" name="file" required>
                      </div>
                   </section>   
