--- a/WebContent/admin/accommodations/applyDetail.html
+++ b/WebContent/admin/accommodations/applyDetail.html
@@ -201,8 +201,8 @@
 								
 							</form>
 							<div class="btn-box">
-							<input type="submit" value="삭제" class="btn delete-btn">
-							<input type="submit" value="승인" class="btn approval-btn">
+								<a class="btn-cancel" href="edit?id=${n.id}">승인</a>
+								<a class="btn-cancel" href="del?id=${n.id}">삭제</a>
 							</div>
 						</section>
 					</div>
