--- a/WebContent/admin/accommodations/detail.html
+++ b/WebContent/admin/accommodations/detail.html
@@ -200,10 +200,10 @@
 									</div>
 								</section>
 							</form>
-							<div class="btn-box">
-								<input type="submit" value="삭제" class="btn delete-btn">
-							</div>
 						</section>
+						<div class="btn-box">
+							<a class="btn-cancel" href="del?id=${n.id}">삭제</a>
+						</div>
 					</div>
 				</main>
 			</div>
